1 api create users/details/id and profile/details/2
